--- a/puppet/is/templates/carbon-home/repository/conf/carbon.xml.erb
+++ b/puppet/is/templates/carbon-home/repository/conf/carbon.xml.erb
@@ -269,7 +269,7 @@
         <!-- Default cache timeout in minutes -->
         <DefaultCacheTimeout>15</DefaultCacheTimeout>
         <!-- Force all caches to act as local -->
-        <ForceLocalCache>false</ForceLocalCache>
+        <ForceLocalCache>true</ForceLocalCache>
     </Cache>
 
     <!--
